fix btn text alignment

--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ button {
   cursor: pointer;
   display: flex;
   flex-direction: column;
+  align-items: center;
   margin-top: 1.5rem;
 }
 
